--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="titulo">
         <h3>Sistema de Inscripción y Asistencia a Eventos [IAS]</h3>
     </div>
-    <form class="formulario" action="inicio.html" method="POST">
+    <form class="formulario" action="inicio.html" method="GET">
 
         <label>Usuario</label><br>
         <input type="text" name="Usuario" value=""><br>
