--- a/inicio.html
+++ b/inicio.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
-<!-- Sidebar -->
-<div class="sidebar" style="width:15%">
-    <h3 class="w3-bar-item">Menu</h3>
-    <a href="#" class="w3-bar-item w3-button">Link 1</a>
-    <br>
-    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-    <br>
-    <a href="#" class="w3-bar-item w3-button">Link 3</a>
-    <br>
-  </div>
+<!-- Side navigation -->
+<div class="sidenav">
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
+
+<!-- Page content -->
+<div class="main">
+  ...
+</div>
   
   <!-- Page Content -->
   <div style="margin-left:15%">
