--- a/HTML/inicio.html
+++ b/HTML/inicio.html
@@ -16,8 +16,8 @@
   <div class="sidenav">
     <a href="inicio.html">Inicio</a>
     <a href="eventos.html">Eventos</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="miseventos.html">Mis Eventos</a>
+    <a href="cuenta.html">Mi Cuenta</a>
   </div>
 
   <!-- Page content -->
