--- a/HTML/miseventos.html
+++ b/HTML/miseventos.html
@@ -11,6 +11,7 @@
     <link rel='stylesheet' type='text/css' href='../CSS/eventos.css' />
 </head>
 
+
 <body>
     <!-- Side navigation -->
     <div class="sidenav">
@@ -24,36 +25,23 @@
     <div class="main">
 
         <div class="Titulo">
-            <h1>Eventos</h1>
+            <h1>Mis Eventos</h1>
         </div>
 
         <div class="Tabla">
-            <h4>Listado de Eventos Disponibles</h4>
+            <h4>Listado de Eventos Disponibles a los que se confirmó asistencia</h4>
             <br>
             <table>
                 <thead>
                         <th>Nombre del Evento</th>
                         <th>Descripción</th>
                         <th>Lugar</th>
-                        <th>Fecha</th>
-                        
+                        <th>Fecha</th>              
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Ecosistemas Tecnológicos Mediados por herramientas virtuales</td>
-                        <td>Evento realizado por la Dirección de Relaciones Internacionales</td>
-                        <td>UTP - Webinar Virtual</td>
-                        <td>20 de junio de 2020 | 11 AM</td>
-                    </tr>
-                    <tr>
                         <td>Institute for Careers and Innovation Logistics Webinar</td>
                         <td>Riesgos asociados al manejo de productos químicos</td>
-                        <td>UTP - Webinar Virtual</td>
-                        <td>22 de junio | 10:30AM</td>
-                    </tr>
-                    <tr>
-                        <td>Institute for Careers and Innovation Logistics Webinar</td>
-                        <td>Custom Service Management Aplicado a la Logística</td>
                         <td>UTP - Webinar Virtual</td>
                         <td>22 de junio | 10:30AM</td>
                     </tr>
@@ -63,19 +51,19 @@
                         <td>UTP - Webinar Virtual</td>
                         <td>24 de junio | 10:30AM</td>
                     </tr>
-                    <tr>
-                        <td>Tecnologías Educativas para la Educación Virtual</td>
-                        <td>Recursos de Moodle para la Evaluación de los Aprendizajes en Educación Virtual</td>
-                        <td>UTP - Webinar Virtual</td>
-                        <td>24 de junio | 10:30AM</td>
-                    </tr>
                     <hr>
                 </tbody>
             </table>
         </div>
 
+        <div class="TextoMisEventos">
+            <p>Aquí se presenta la lista de los eventos a los que se apuntó el usuario. 
+            El sistema generará un código QR para que sea escaneado en el evento.</p>
+            <p>También se podrá escoger si desea cancelar la asistencia, en el producto final.</p>
+        </div>
+
         <div class="accionrecomendada">
-            <p>Para continuar, presione <b>Mis Eventos</b> en la barra lateral.</p>
+            <p>Para continuar, presione <b>Mi Cuenta</b> en la barra lateral.</p>
         </div>
 
         <div class="footer">
